2009/09/10 (TS):
 - drvAmdEthIpBasic.c, drvGnrIpBasic.c, drvLan9118IpBasic.c,
   drvXXXIpBasic.c.Template, lanIpBasic.c, lanIpBasic.h,
   lanIpBasicTest.c:
   renamed lanIpBscDrvStart()/lanIpBscDrvShutdown() ->
   NETDRV_START() / NETDRV_SHUTDOWN().

2009/09/10 (TS):
 - drvLan9118.c, drvUdpSock.c, lanIpBasic.c, lanIpBasic.h,
   lanIpBasicTest.c, lanIpProto.h, padStream.c: renamed and
   restructured some of the protocol header structs (but I'm
   still not quite happy).

2009/09/10 (TS):
 - lanIpBasic.c:
     o moved ARP handling to low-priority worker.
     o BUGFIX: cannot use 'arprep' buffer for sending ARP reply
       since a new request may arrive before our reply has made
       it out of the TX. Instead, we re-use the received packet
       but must copy arprep there (no issue since we do this
       from the low-priority worker anyways).

2009/09/10 (TS):
 - lanIpBasic.c:
     o moved IGMP checksum calculation to low-priority worker (processIgmp()).
     o moved ICMP handling low-priority worker (processIcmp()).

2009/09/10 (TS):
 - lanIpBasic.c: many changes and additions; multicast + IGMPv2
   support were added. In more detail:
    o added 'callout' facility (copy of my implementation for libbsdport)
      for scheduling work/callbacks in the future.
    o added htonsc(), htonlc() for byte-swapping constants. These
      'routines' are designed to be optimized away by the compiler
      (which can perform the swapping at compile-time).
    o BUGFIX: RBUF_ALIGN() macro didn't really align...
    o added 'refcnt' to 'rbuf's so they can be referenced by
      multiple users. Buffer is released when the refcnt drops to 0.
    o rbuf now also holds a pointer to the interface associated
      with the buffer.
    o added 'freeBufMem()' for cleaning up rbufs allocated from the
      heap. This is executed when shutting down the stack.
    o added support for IP4 multicast.
    o implemented IGMP (v2; host-part only).